# TaskManageerAgent

./: .gitignore  README.md  config.py  pyproject.toml
.cursor/rules/: create-task.mdc  regist-calendar.mdc  show-task-list.mdc  suggest-schedule.mdc  task-manager-agent.mdc
tools/: __init__.py  get_calendar.py  get_todays_date.py  open_calendar.py  set_tasks_calendar.py  ui_tasks_list.py
tools/calendar/: get_calendar.py  set_tasks_calendar.py
